Node app: Update JSDOM; fix SPDX warning

--- a/node-app/package.json
+++ b/node-app/package.json
@@ -5,7 +5,7 @@
   "main": "dezoomify-node.js",
   "dependencies": {
     "canvas": "^1.4.0",
-    "jsdom": "^8.4.0",
+    "jsdom": "^11.9.0",
     "request": "^2.72.0"
   },
   "devDependencies": {},
@@ -24,7 +24,7 @@
     "download"
   ],
   "author": "Ophir LOJKINE",
-  "license": "GPL",
+  "license": "GPL-2.0",
   "bugs": {
     "url": "https://github.com/lovasoa/dezoomify/issues"
   },
