--- a/node-app/package.json
+++ b/node-app/package.json
@@ -4,9 +4,8 @@
   "description": "Download images in various zoomable image formats.",
   "main": "dezoomify-node.js",
   "dependencies": {
-    "canvas": "^1.4.0",
-    "jsdom": "^11.9.0",
-    "request": "^2.72.0"
+    "canvas": "^2.1.0",
+    "jsdom": "^11.12.0"
   },
   "devDependencies": {},
   "scripts": {
