--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: php
 php:
   - "5.6"
+dist: xenial
+services:
+  - xvfb
 script: cd tests && npm install && npm test
 before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
   - "php -S 127.0.0.1:8181 &"
 sudo: false
